--- a/login.html
+++ b/login.html
@@ -27,7 +27,7 @@
             <input type="text" id="login_acno" class="w-100" placeholder="Account number"><br><br>
             <input type="password" id="login_pswd"  class="w-100" placeholder="password"><br>
 
-            <br><center><button class="btn btn-outline-primary w-75" onclick="" >Login</button></center><hr><br>
+            <br><center><button type="button" class="btn btn-outline-primary w-75" onclick="login()" >Login</button></center><hr><br>
                      <p class="ms-5"><a href="">forgot Password?</a> OR <a href="./signup.html">Sign up</a></p>
         </div>
 
