--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
             <input type="text" id="reg_acno" class="w-100" placeholder="Account number"><br><br>
             <input type="password" id="reg_pswd"  class="w-100" placeholder="password"><br>
 
-            <br><center><button class="btn btn-outline-primary w-75" onclick="createAccount()" >register</button></center><hr><br>
+            <br><center><button type="button" class="btn btn-outline-primary w-75" onclick="createAccount()" >register</button></center><hr><br>
                  <center> <p > <a href="./login.html">Sign in</a></p></center>    
         </div>
 
